# PA_PB1

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
data/: affinity_measurements_PA-PB1_formatted.csv  input_sequences.txt  seqs_aff_alberto_darren.txt  seqs_aff_alberto_darren_6best.txt
data/energy_model_params/: PNB_2R_3lay_negbinom_energy_model_weights.json
data/pdbs/: 2ZNL.cif  7QVM_interface_seqs.txt
notebooks/: analyze_results.ipynb  analyze_results_1.ipynb  analyze_results_wide.ipynb  compare_predictions_models.ipynb  summary_analysis_results.ipynb
notebooks/results/: top_candidates.csv
results/: summary_best_candidates.csv
results/colabdesign/: top_candidates_wide.csv
results/colabdesign/custom/: seqs_aff_alberto_darren_6best.json
src/: check_gen_seq.py  config.py  generate_sequences.py  generate_sequences_2enw.py  generate_sequences_baseline.py  generate_sequences_multimer.py  model_energy_guidance.py  optimize_sequence.py  optimize_sequences.py  optimize_sequences_multimer.py  scan_energy_weight.py  score_custom_sequences.py  score_sequences.py
src/slurm_subs/: collect_predictions.py  pa_pb1_wide_292363_0.out  pa_pb1_wide_292363_1.out  pa_pb1_wide_292363_2.out  pa_pb1_wide_292363_3.out  pa_pb1_wide_292363_4.out  pa_pb1_wide_292363_5.out  pa_pb1_wide_304814_0.out  pa_pb1_wide_304814_1.out  pa_pb1_wide_304814_2.out  parse_multimer_out.py  parse_slurm_out.py  run_predictions.sh  submit_boltz.sh  submit_multimer_search.sh  submit_predictions.sh  submit_protocols.sh  submit_protocols_2.sh  submit_wide_search.sh
(+22 files in other folders)
